# PitterOS

./: Pitter OS - Atalho Desktop - Atalho.lnk  Pitter OS.bat  Pitter OS.lnk  README.md
SistemaOperacional/: .gitignore  Gerar_Instalador_Windows.bat  README.md  abrir_pitter_os.bat  cargo_output.txt  create-desktop-shortcut.js  create-icon.js  create-spider-icon.js  electron-main.js  generate-icons.js  package-lock.json  package.json  path.txt
SistemaOperacional/.github/workflows/: release.yml
SistemaOperacional/src/: index.html  main.js  styles.css
SistemaOperacional/src-tauri/: Cargo.toml  build_error.txt  tauri.conf.json
SistemaOperacional/src-tauri/src/: main.rs
SistemaOperacional/src/apps/: browser-app.js  file-explorer.js  games-app.js  settings.js  system-info.js  task-manager.js  terminal.js  ubuntu-vm.js
SistemaOperacional/src/backend/: index.js  ipc-handlers.js  kernel.js
SistemaOperacional/src/core/: battery-manager.js  clock-manager.js  control-center.js  db.js  desktop-manager.js  desktop.js  download-manager.js  kernel-api.js  launcher-manager.js  lockscreen-manager.js  preload.js  profile-manager.js  taskbar.js  wifi-manager.js  window-manager.js
