[package]
name = "sistema-operacional"
version = "0.1.0"
description = "Sistema Operacional - Backend Kernel em Tauri"
authors = ["Jean Pitter"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "fs-all", "dialog-all", "http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
